Changed z-index on dropdown to fix overlap issue with links to send box

--- a/static/CSS/master.css
+++ b/static/CSS/master.css
@@ -40,6 +40,7 @@ html, body{
   display: inline-block;
   overflow:visible;
   cursor: pointer;
+  z-index:1;
   }
 
   #dropdown-content {
